# multi-agent-orchestrator

./: .gitignore  .lycheeignore  .spi.yml  CONTRIBUTING.md  Package.swift  README.md  TRIAGE.md
.github/: FUNDING.yml
docs/: astro.config.mjs  package-lock.json  package.json
python/: README.md  SKILL.md  setup.cfg
python/src/agent_squad/: __init__.py  agent_overlap_analyzer.py  classifier_test_tool.py
python/src/agent_squad/agents/: __init__.py  agent.py  amazon_bedrock_agent.py  anthropic_agent.py  bedrock_flows_agent.py  bedrock_llm_agent.py  chain_agent.py  grounded_agent.py  supervisor_agent.py
python/src/agent_squad/retrievers/: __init__.py  dakera_retriever.py
python/src/agent_squad/storage/: __init__.py  summarizing_chat_storage.py
python/src/agent_squad/tools/: __init__.py  mcp_tool_provider.py
python/src/agent_squad/types/: types.py
python/src/agent_squad/utils/: __init__.py  tool.py  ui.py
python/src/tests/: test_agent_overlap_analyzer.py
python/src/tests/agents/: test_amazon_bedrock_agent.py  test_anthropic_agent.py  test_bedrock_flows_agent.py  test_bedrock_llm_agent.py  test_chain_agent.py  test_grounded_agent.py  test_supervisor_agent.py
python/src/tests/classifier_test_tool/: sample_config.json  test_classifier_test_tool.py
python/src/tests/retrievers/: test_dakera_retriever.py
python/src/tests/storage/: test_summarizing_chat_storage.py
python/src/tests/tools/: test_mcp_tool_provider.py
python/src/tests/utils/: test_tool.py
swift/: .gitignore  README.md  SKILL.md
typescript/: README.md  SKILL.md  eslint.config.mjs  (+2 more)
(+222 files in other folders)
