[metadata]
name = agent_squad
version = 1.1.3
author = Anthony Bernabeu, Corneliu Croitoru
author_email = bernabeu.anthony@gmail.com, cornel.croitoru@gmail.com
description = Agent Squad framework
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files = LICENSE
url = https://github.com/2fastlabs/agent-squad
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11

[options.extras_require]
aws =
    boto3>=1.36.18
anthropic =
    anthropic>=0.49.0
openai =
    openai>=1.55.3
sql =
    libsql-client>=0.3.1
strands-agents =
    strands-agents>=0.1.6
dakera =
    dakera>=0.12.8
mcp =
    mcp>=1.0.0

all =
    anthropic>=0.40.0
    openai>=1.55.3
    boto3>=1.36.18
    libsql-client>=0.3.1
    dakera>=0.12.8
    mcp>=1.0.0

[options.packages.find]
where = src
exclude =
    tests*
